--- a/views/archive.hbs
+++ b/views/archive.hbs
@@ -75,16 +75,6 @@
                                             <div class="col s12">&nbsp;</div>
                                             <div class="col s12 m6 l3"><p></p></div>
                                             <div class="col s12 m6 l3"><p></p></div>
-                                            <div class="col s12 m6 l3"><p></p>
-                                                <div class="delete_button">
-                                                    <a href="" class="btn-small">Edit</a>
-                                                </div>
-                                            </div>
-                                            <div class="col s12 m6 l3"><p></p>
-                                                <div class="delete_button">
-                                                    <a href="" class="btn-small">Delete</a>
-                                                </div>
-                                            </div>
                                     </div>
                                 </div>
 
@@ -105,7 +95,7 @@
                             <td>{{this.shelf}}</td>
                             <td>
                                 <div class="delete_button">
-                                    <a href="unarchive-ingredient/{{this.ingredient_id}}" class="btn waves-effect waves-light luluble-pink">Unarchive</a>
+                                    <a href="unarchive-ingredient/{{this.ingredient_id}}" class="btn waves-effect waves-luluble-pink luluble-pink">Unarchive</a>
                                 </div>
                         </td>
                         </tr>
@@ -135,7 +125,7 @@
                                                     </div>
                                                     <div class = "col s12 m4 l2"></div>
                                                         <div class="delete_button">
-                                                            <a href="unarchive-project/{{this.project_id}}" class="btn waves-effect waves-light luluble-light-grey">Unarchive</a>
+                                                            <a href="unarchive-project/{{this.project_id}}" class="btn waves-effect waves-light-grey luluble-light-grey">Unarchive</a>
                                                         </div>
                                         </div>
                                 </div>
