--- a/views/formulas.hbs
+++ b/views/formulas.hbs
@@ -8,7 +8,7 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
         <script type="text/javascript" src="/routes/projects.js"></script>
-        <link rel="stylesheet" href="/styles/color.css">
+        <link rel="stylesheet" href="/partials/color.css">
 
     </head>
     <style>
@@ -39,7 +39,7 @@
 
 
         <div class="col s12 m4 l2">
-            <a href="#open" class="btn waves-effect waves-light luluble-pink modal-trigger">Add Trial</a>
+            <a href="#open" class="btn waves-effect waves-luluble-pink luluble-pink modal-trigger">Add Trial</a>
 
             <div class="modal" id="open">
                 <div style="padding: 5% 5% 5% 5%">
@@ -216,7 +216,7 @@
                     
                     <td>
                         <div class="col s12 m4 l2">
-                        <a href="#openIng" class="btn waves-effect waves-light luluble-pink modal-trigger">Add Phase</a>
+                        <a href="#openIng" class="btn waves-effect waves-luluble-pink luluble-pink modal-trigger">Add Phase</a>
 
                         <div class="modal" id="openIng">
                             <div style="padding: 5% 5% 5% 5%">
@@ -271,7 +271,7 @@
 
                     <td>
                         <div class="col s12 m4 l2">
-                        <a href="#makeTrial" class="btn waves-effect waves-light luluble-pink modal-trigger">MAKE TRIAL</a>
+                        <a href="#makeTrial" class="btn waves-effect waves-luluble-pink luluble-pink modal-trigger">MAKE TRIAL</a>
                         <div class="modal" id="makeTrial">
                             <div style="padding: 5% 5% 5% 5%">
                                 {{!-- <b><span>Add a New Ingredient</span></b> --}}
@@ -350,7 +350,7 @@
                         
 
                         <div class="col s12 m4 l2">
-                        <a href="#openIng2" class="btn waves-effect waves-light luluble-pink modal-trigger">Add Phase</a>
+                        <a href="#openIng2" class="btn waves-effect waves-luluble-pink luluble-pink modal-trigger">Add Phase</a>
 
                         <div class="modal" id="openIng2">
                             <div style="padding: 5% 5% 5% 5%">
@@ -419,7 +419,7 @@
 
                     <td>
                         <div class="col s12 m4 l2">
-                        <a href="#makeTrial2" class="btn waves-effect waves-light luluble-pink modal-trigger">MAKE TRIAL</a>
+                        <a href="#makeTrial2" class="btn waves-effect waves-luluble-pink luluble-pink modal-trigger">MAKE TRIAL</a>
                         <div class="modal" id="makeTrial2">
                             <div style="padding: 5% 5% 5% 5%">
                                 {{!-- <b><span>Add a New Ingredient</span></b> --}}
@@ -450,7 +450,7 @@
 
                     <td>
                         <div class="col s12 m4 l2">
-                        <a href="#printTrial2" class="btn waves-effect waves-light luluble-pink modal-trigger">PRINT TRIAL</a>
+                        <a href="#printTrial2" class="btn waves-effect waves-luluble-pink luluble-pink modal-trigger">PRINT TRIAL</a>
                         <div class="modal" id="makeTrial2">
                             <div style="padding: 5% 5% 5% 5%">
                                 {{!-- <b><span>Add a New Ingredient</span></b> --}}
