--- a/views/inventory.hbs
+++ b/views/inventory.hbs
@@ -259,7 +259,7 @@
         <div class="col s12 m4 l4">
             <p></p>
             <div class="delete_button">
-                <a href="#" class="btn waves-effect waves-light luluble-pink">Delete</a>
+                <a href="#" class="btn waves-effect waves-luluble-pink luluble-pink">Delete</a>
             </div>
         </div>
         <div class="col s12 m4 l6">
@@ -423,18 +423,6 @@
                                 </div>
 
                                 <div class="col s12">&nbsp;</div>
-                                <div class="col s12 m6 l3">
-                                    <div class="edit_button">
-                                        <a href="" class="btn-small">Edit</a>
-                                    </div>
-                                </div>
-                                
-                                <div class="col s12 m6 l3">
-                                    <p></p>
-                                    <div class="delete_button">
-                                        <a href="" class="btn-small">Delete</a>
-                                    </div>
-                                </div>
                             </div>
                         </div>
 
@@ -456,14 +444,14 @@
                     <td>
                         <div class="archive_button">
                             <a href="archive-ingredient/{{this.ingredient_id}}"
-                                class="btn waves-effect waves-light luluble-pink">Archive</a>
+                                class="btn waves-effect waves-luluble-pink luluble-pink">Archive</a>
                         </div>
                     </td>
 
                     
                     <td>
                         <div class="edit_button">
-                            <a href="#termss{{ingredient_id}}" class="btn waves-effect waves-light luluble-pink modal-trigger">Edit</a>
+                            <a href="#termss{{ingredient_id}}" class="btn waves-effect waves-luluble-pink luluble-pink modal-trigger">Edit</a>
                             <div class="modal" id="termss{{ingredient_id}}">
                                 <div style="padding: 5% 5% 5% 5%">
                                     {{!-- <b><span>Add a New Ingredient</span></b> --}}
