--- a/views/projects.hbs
+++ b/views/projects.hbs
@@ -7,6 +7,7 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
         <link rel="stylesheet" href="/styles/projects.css">
+        <link rel="stylesheet" href="/partials/color.css">
         <script type="text/javascript" src="/routes/projects.js"></script>
 
     </head>
@@ -43,12 +44,12 @@
                                     </div>
                                     <div class = "col s12 m4 l4">
                                         <div class="delete_button">
-                                            <a href="archive-project/{{project_id}}" class="btn waves-effect waves-light luluble-light-grey">Archive</a>
+                                            <a href="archive-project/{{project_id}}" class="btn waves-effect waves-light-grey luluble-light-grey">Archive</a>
                                         </div>
                                     </div>
                                     <div class = "col s12 m4 l4">
                                         <div class="edit_button">
-                                            <a href="#edit_project{{project_id}}" class="btn waves-effect waves-light luluble-light-grey modal-trigger">Edit</a>
+                                            <a href="#edit_project{{project_id}}" class="btn waves-effect waves-light-grey luluble-light-grey modal-trigger">Edit</a>
                                             <div class="modal" id="edit_project{{project_id}}">
                                                 <div style="padding: 5% 5% 5% 5%">
                                                     {{!-- <b><span>Add a New Ingredient</span></b> --}}
