--- a/public/partials/color.css
+++ b/public/partials/color.css
@@ -14,6 +14,12 @@
    background-color: #e700a2 !important; 
 } 
 
+.waves-effect.waves-light-grey .waves-ripple {
+  /* The alpha value allows the text and background color
+  of the button to still show through. */
+   background-color: #7f7f7f !important; 
+} 
+
 
 .luluble-pink {
   background-color: #e700a2 !important;
