make trial attempt

--- a/views/formulas.hbs
+++ b/views/formulas.hbs
@@ -283,10 +283,14 @@
                                         {{!-- <h2>Textbook</h2> --}}
 
                                         {{!-- Field 1 --}}
-                                        <b><label for="tuluble">Quantity ({{unit}}):</label></b>
+                                        {{!-- <b><label for="tuluble">Quantity ({{unit}}):</label></b>
                                         <input type="range" min = "0" max = "100" name = "userInput1" id="userInput1">
-                                        <p> </p>
+                                        <p> </p> --}}
                                         {{!-- USE MATH IN SQL TO FIND MAX VAL --}}
+
+                                        <b><label for="tuluble">Quantity ({{unit}}):</label></b>
+                                        <input type="number" name = "userInput1" id="userInput1">
+                                        <p> </p>
 
                                        
                                         <div class="make_trial_button">
