archive fix + new error page

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -36,7 +36,7 @@
                         </span>
                     </h1>
 
-                    <h3><button background-color="color: black" style="color: black;" onclick="lastAccessedProject();">&nbsp;Most Recent Project&nbsp;</button></h3>
+                    {{!-- <h3><button background-color="color: black" style="color: black;" onclick="lastAccessedProject();">&nbsp;Most Recent Project&nbsp;</button></h3> --}}
 
                     <center>
                         <p>&nbsp;</p>
