--- a/views/projects.hbs
+++ b/views/projects.hbs
@@ -34,7 +34,7 @@
                                 <span class="card-title"><a style="color: black;"
                                         href="/projects/{{project_id}}/trial1/trial1"><b>{{project_name}}</a></b></span>
                                 <p style="color: black;">Client: {{client}}</p>
-                                <p style="color: black;">{{date}}</p>
+                                <p style="color: black;">October 12, 2021</p>
                                 <div class="col s12">&nbsp;</div>
                                 <div class="row">
                                     <div class = "col s12 m4 l4">
@@ -55,14 +55,9 @@
                                                     {{!-- <b><span>Add a New Ingredient</span></b> --}}
                                                     <h1 style="color: black;" style="font-size:40px;" >Edit Project</h1>
 
-                                                    <form method="POST" action="/projectupdate">
+                                                    <form method="POST" action="/projects/{{project_id}}/projectupdate">
                                                         <article class="regular">
                                                             {{!-- <h2>Textbook</h2> --}}
-
-                                                            {{!-- Field 1 --}}
-                                                            <b><label for="tuluble">Project ID: (Do not Edit)</label></b>
-                                                            <input type="text" name = "userInput0" id="userInput0" value="{{this.project_id}}" readonly>
-                                                            <p> </p>
 
                                                             <b><label for="tuluble">Project Name:</label></b>
                                                             <input type="text" name = "userInput1" id="userInput1" value="{{this.project_name}}">
@@ -102,10 +97,10 @@
                         <div class="col s12"><b><font size="+2">{{project_name}}</font></b></div>
                         <div class="col s12">&nbsp;</div>
                         <div class="col s6">
-                            <span><b>Client:</b> {{client}}<br></br><b>Date:</b> {{date}}</span>
+                            <span><b>Client:</b> {{client}}<br></br><b>Date: </b>10/12/2021</span>
                         </div>
                         <div class="col s6">
-                            <span><b>Number of Formulas:</b>2<br></br><b>Other: </b>Information</span>
+                            <span><b>Number of Formulas: </b>2<br></br><b>Other: </b>Information</span>
                         </div>
                         <div class="col s12">&nbsp;</div>
                         {{!-- <div class="col s12 m6 l3">
@@ -115,24 +110,7 @@
                             <p></p>
                         </div> --}}
 
-                        <div class="col s12 m6 l3">
-                            <p></p>
-                            <div class="delete_button">
-                                <a href="" class="btn-small">Edit</a>
-                            </div>
-                        </div>
-                        <div class="col s12 m6 l3">
-                            <p></p>
-                            <div class="delete_button">
-                                <a href="" class="btn-small">Delete</a>
-                            </div>
-                        </div>
-                        <div class="col s12 m6 l3">
-                            <p></p>
-                            <div class="open_button">
-                                <a href="/formulas" class="btn-small">Open</a>
-                            </div>
-                        </div>
+                      
                     </div>
                 </div>
             </div>
@@ -161,7 +139,7 @@
                     const inputValueU3 = $("#userInputU3").val();
                     const inputValueU4 = $("#userInputU4").val();
 
-                    window.location = "/projectupdate";
+                    window.location = "/projects/projectupdate";
                     //$(window).attr("location", "inventoryformsubmit/" + inputValue1);
                     });
                 });
@@ -199,11 +177,6 @@
                                 {{!-- Field 3 --}}
                                 <b><label for="tuluble">Date Started:</label></b>
                                 <input type="date" name = "userInputP3" id="userInputP3" placeholder="Enter Date Started" maxlength="20">
-                                <p> </p>
-
-                                {{!-- Field 4 --}}
-                                <b><label for="tuluble">Active:</label></b>
-                                <input type="number" name = "userInputP4" id="userInputP4" placeholder="Enter 1 for Yes, 0 for No" maxlength="20">
                                 <p> </p>
 
                                 <div class="add_project_button">
